<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertProductActivity">

    <EditText
        android:id="@+id/ipNameEditText"
        android:layout_width="377dp"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/product_name"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipEditSupplierAuto" />

    <EditText
        android:id="@+id/ipPriceEditText"
        android:layout_width="374dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/product_price_number"
        android:inputType="numberSigned"
        android:textSize="24sp"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipNameEditText" />

    <EditText
        android:id="@+id/ipEditSupplierAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/edit_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ipInsertButton"
        android:layout_width="138dp"
        android:layout_height="53dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="50dp"
        android:text="@string/insert_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipPriceEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>