<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminMenuActivity">

    <Button
        android:id="@+id/editUserButton"
        android:layout_width="191dp"
        android:layout_height="62dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="62dp"
        android:text="@string/edit_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEditProducts"
        android:layout_width="191dp"
        android:layout_height="62dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="40dp"
        android:text="@string/edit_products"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUserButton" />

    <Button
        android:id="@+id/buttonViewCommands"
        android:layout_width="191dp"
        android:layout_height="62dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="32dp"
        android:text="@string/view_orders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEditProducts" />
</androidx.constraintlayout.widget.ConstraintLayout>