<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditUserActivity">

    <SearchView
        android:id="@+id/userSearchView"
        android:layout_width="407dp"
        android:layout_height="53dp"
        android:queryHint="Search username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editUserSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="44dp"
        android:text="@string/save_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTypeSpinner" />

    <EditText
        android:id="@+id/emailAddresEditView"
        android:layout_width="283dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/first_fragment_label"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/emailTextView"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

    <TextView
        android:id="@+id/userTypeTextView"
        android:layout_width="93dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/user_type"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddresEditView" />

    <Spinner
        android:id="@+id/userTypeSpinner"
        android:layout_width="283dp"
        android:layout_height="52dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/userTypeTextView"
        app:layout_constraintTop_toBottomOf="@+id/emailAddresEditView" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="60dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

    <TextView
        android:id="@+id/usernameEditText"
        android:layout_width="344dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/accept_order"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountSearchListView" />

    <ListView
        android:id="@+id/accountSearchListView"
        android:layout_width="409dp"
        android:layout_height="198dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSearchView" />
</androidx.constraintlayout.widget.ConstraintLayout>