<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A66436"
    tools:context=".RegisterActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputUsernameRegister"
        android:layout_width="411dp"
        android:layout_height="84dp"
        android:layout_marginTop="224dp"
        android:hint="@string/username"
        android:inputType="text|textAutoComplete"
        android:textColorHint="#FFFDE7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputPasswordRegister"
        android:layout_width="411dp"
        android:layout_height="99dp"
        android:layout_marginTop="392dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#FFFDE7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEmailRegister"
        android:layout_width="411dp"
        android:layout_height="84dp"
        android:layout_marginTop="308dp"
        android:hint="@string/email"
        android:inputType="text|textAutoComplete"
        android:textColorHint="#FFFDE7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="133dp"
        android:layout_height="65dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="151dp"
        android:layout_marginEnd="139dp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputPasswordRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>