<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A66436"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="316dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputUsername"
        android:layout_width="411dp"
        android:layout_height="84dp"
        android:layout_marginTop="168dp"
        android:hint="@string/username"
        android:inputType="text|textAutoComplete"
        android:textColorHint="#FFFDE7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputPassword"
        android:layout_width="411dp"
        android:layout_height="99dp"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#FFFDE7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputUsername" />

    <Button
        android:id="@+id/loginAction"
        android:layout_width="164dp"
        android:layout_height="75dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="182dp"
        android:text="@string/loginAction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>